# book-manager-C

./: .gitignore  CMakeLists.txt  README.md  main.c
data/: books.txt
include/: book.h  config.h  config.h.in  file_io.h  utils.h
src/: book.c  file_io.c  main.c  utils.c
